gst/video: add custom VP8 buffer meta
Used to communicate out-of-band information between the codec
and the payloader.

--- a/gst-libs/gst/video/Makefile.am
+++ b/gst-libs/gst/video/Makefile.am
@@ -53,7 +53,8 @@ libgstvideo_@GST_API_VERSION@_la_SOURCES = \
 	video-blend.c		\
 	video-overlay-composition.c \
 	video-multiview.c	\
-	gstvideotimecode.c
+	gstvideotimecode.c \
+	gstvideovp8meta.c
 
 nodist_libgstvideo_@GST_API_VERSION@_la_SOURCES = $(BUILT_SOURCES)
 
@@ -90,7 +91,8 @@ libgstvideo_@GST_API_VERSION@include_HEADERS = \
 	video-blend.h		\
 	video-overlay-composition.h \
 	video-multiview.h	\
-	gstvideotimecode.h
+	gstvideotimecode.h \
+	gstvideovp8meta.h
 
 nodist_libgstvideo_@GST_API_VERSION@include_HEADERS = $(built_headers)
 noinst_HEADERS = gstvideoutilsprivate.h
