--- a/gst-libs/gst/video/meson.build
+++ b/gst-libs/gst/video/meson.build
@@ -12,6 +12,7 @@ video_sources = [
 #  'gstvideotimecode.c',
   'gstvideoutils.c',
   'gstvideoutilsprivate.c',
+  'gstvideovp8meta.c',
   'navigation.c',
   'video.c',
   'video-blend.c',
@@ -45,6 +46,7 @@ video_headers = [
   'gstvideosink.h',
 #  'gstvideotimecode.h',
   'gstvideoutils.h',
+  'gstvideovp8meta.h',
   'navigation.h',
   'video.h',
   'video-event.h',
