--- a/gst-libs/gst/video/meson.build
+++ b/gst-libs/gst/video/meson.build
@@ -9,7 +9,7 @@ video_sources = [
   'gstvideometa.c',
   'gstvideopool.c',
   'gstvideosink.c',
-  'gstvideotimecode.c',
+#  'gstvideotimecode.c',
   'gstvideoutils.c',
   'gstvideoutilsprivate.c',
   'navigation.c',
@@ -43,7 +43,7 @@ video_headers = [
   'gstvideometa.h',
   'gstvideopool.h',
   'gstvideosink.h',
-  'gstvideotimecode.h',
+#  'gstvideotimecode.h',
   'gstvideoutils.h',
   'navigation.h',
   'video.h',
