meson: disable po [pexhack]

--- a/meson.build
+++ b/meson.build
@@ -264,7 +264,7 @@ subdir('sys')
 subdir('tools')
 subdir('tests')
 subdir('pkgconfig')
-subdir('po')
+#subdir('po')
 
 if build_machine.system() == 'windows'
   message('Disabling gtk-doc while building on Windows')
